# OGLA

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: Camera.h  Common.h  Engine.h  IndexBuffer.h  Input.h  Light.h  Material.h  Mesh.h  Model.h  Renderer.h  Scene.h  SceneStateMachine.h  Shader.h  Shape.h  Texture.h  Type.h  Vertex.h  VertexArray.h  VertexBuffer.h  VertexData.h  Window.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
res/shader/: shader.fs  shader.vs
res/shaders/: core.frag  core.fs  core.vert  core.vs  shader.fs  shader.vs
scripts/: build.sh  config.sh  run.sh
src/: Camera.cpp  Engine.cpp  Input.cpp  Light.cpp  Mesh.cpp  Model.cpp  Renderer.cpp  Scene.cpp  SceneStateMachine.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexData.cpp  Window.cpp  main.cpp
src/Core/: Common.h  Engine.cpp  Engine.h  Singleton.h
src/Core/Input/: Input.cpp  Input.h
src/Core/Scene/: Scene.h  SceneStateMachine.h
src/Core/Window/: Window.cpp  Window.h
src/Graphics/Camera/: Camera.cpp  Camera.h
src/Graphics/Light/: Light.cpp  Light.h
src/Graphics/Material/: Material.cpp  Material.h
src/Graphics/Mesh/: Mesh.cpp  Mesh.h
src/Graphics/Model/: Model.cpp  Model.h
src/Graphics/Shader/: Shader.cpp  Shader.h
src/Graphics/Shape/: Shape.h
src/Graphics/Texture/: Texture.cpp  Texture.h
src/Graphics/Vertex/: IndexBuffer.cpp  IndexBuffer.h  Vertex.h  VertexArray.cpp  VertexArray.h  VertexBuffer.h  VertexData.h
src/Scenes/: CubeScene.cpp  CubeScene.h  SandboxScene.cpp  SandboxScene.h  SponzaScene.cpp  SponzaScene.h
